<resources>
    <string name="app_name">Popcorn</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Overview</string>
    <string name="mock_overview">Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.</string>
    <string name="poster">Poster</string>
    <string name="title">Logan</string>
    <string name="sort">Sort</string>
    <string name="retry">Retry</string>
    <string name="internet_connection_error">Unable to establish internet connection</string>
    <string name="trailers">Trailers</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="no_trailer_available">No trailers available</string>
    <string name="no_review_available">No review available</string>
    <string name="reviews">Reviews</string>
</resources>
