<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                app:titleEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:title=""
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_marginBottom="@dimen/text_margin_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/poster"
                        android:layout_alignParentStart="true"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:layout_marginStart="16dp"
                        tools:ignore="ContentDescription"/>

                <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/title"
                        android:layout_toEndOf="@id/poster"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_horizontal"
                        android:layout_marginTop="@dimen/text_margin_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                <TextView
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        tools:text="@string/title"
                        android:layout_toEndOf="@id/poster"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_horizontal"
                        android:layout_marginTop="@dimen/text_margin_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:isIndicator="true"
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/poster"
                        android:layout_below="@id/year"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_horizontal"
                        android:layout_marginTop="@dimen/text_margin_horizontal"/>

                <TextView
                        android:layout_below="@id/rating"
                        android:layout_gravity="center"
                        android:id="@+id/review_count"
                        android:layout_width="wrap_content"
                        android:layout_toEndOf="@id/poster"
                        android:textColor="@color/colorAccent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_horizontal"
                        android:layout_marginTop="@dimen/text_margin_horizontal"
                        tools:text="578 reviews"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
            </RelativeLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin_horizontal"
                    android:layout_marginTop="@dimen/text_margin_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/mock_overview"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin_horizontal"
                    android:layout_marginTop="@dimen/text_margin_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin_horizontal"
                    android:layout_marginTop="@dimen/text_margin_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <LinearLayout
                    android:id="@+id/trailers_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        tools:visibility="visible"
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:id="@+id/no_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_horizontal"
                        android:layout_marginTop="@dimen/text_margin_horizontal"
                        android:text="@string/no_trailer_available"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin_horizontal"
                    android:layout_marginTop="@dimen/text_margin_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <LinearLayout
                    android:id="@+id/reviews_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_gravity="center"
                        android:id="@+id/no_reviews"
                        tools:visibility="visible"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin_horizontal"
                        android:layout_marginTop="@dimen/text_margin_horizontal"
                        android:text="@string/no_review_available"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>